--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   These days I'm enthusiastic about the world around React, JavaScript, and Python.
                 </p>
                 <b style="color: black;">
-                  I like to learb new thing and interaction with new people to discuss innovative
+                  I like to learn new thing and interaction with new people to discuss innovative
                   ideas. So I'm always there to have one with you.
                 </b>
             </section>
